[AURA-22](feat): get forum by code
